# lima-xbar-plugin

./: .gitignore  .pre-commit-config.yaml  Changelog.md  LICENSE  Makefile  README.md  lima-plugin  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: awesomebot.yml  codeql-analysis.yml  megalinter.yml  superlinter.yml
