[tool.poetry]
name = "lima-plugin"
version = "1.5.0"
description = "Xbar and Swiftbar plugin to control lima"
authors = ["Joe Block <jpb@unixorn.net>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
coverage = "^5.5"

[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
